--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
                 <div class="col-lg-12 text-center text-lg-start mb-2 mb-lg-0">
                     <div class="d-flex flex-wrap justify-content-between w-100">
                         <a href="tel:+91 9428546875" class="text-muted small me-4"><i class="fas fa-phone-alt text-primary me-2"></i>+91 9428546875</a>
-                        <a href="mailto:support@skykaptradelinks.com" class="text-muted small me-0"><i class="fas fa-envelope text-primary me-2"></i>support@skykaptradelinks.com</a>
+                        <a href="mailto:skykaptradelinks@gmail.com" class="text-muted small me-0"><i class="fas fa-envelope text-primary me-2"></i>skykaptradelinks@gmail.com</a>
                     </div>
                 </div>
                 
@@ -184,7 +184,7 @@
                             </div>
                             <div class="d-flex align-items-center">
                                 <i class="fas fa-envelope text-primary me-3"></i>
-                                <p class="text-white mb-0">support@skykaptradelinks.com</p>
+                                <p class="text-white mb-0">skykaptradelinks@gmail.com</p>
                             </div>
                             <div class="d-flex align-items-center">
                                 <i class="fa fa-phone-alt text-primary me-3"></i>
