update footer links.

--- a/service.html
+++ b/service.html
@@ -196,9 +196,9 @@
                     <div class="col-md-6 col-lg-6 col-xl-4 d-flex justify-content-center">
                         <div class="footer-item">
                             <h4 class="text-white mb-4">Quick Links</h4>
-                            <a href="#"><i class="fas fa-angle-right me-2"></i> About Us</a>
-                            <a href="#"><i class="fas fa-angle-right me-2"></i> Service</a>
-                            <a href="#"><i class="fas fa-angle-right me-2"></i> Contact us</a>
+                            <a href="about.html"><i class="fas fa-angle-right me-2"></i> About Us</a>
+                            <a href="service.html"><i class="fas fa-angle-right me-2"></i> Service</a>
+                            <a href="contact.html"><i class="fas fa-angle-right me-2"></i> Contact us</a>
                         </div>
                     </div>
                     
